GnuPG 2.5 has moved to use KEM API for its ECC encryption/decryption.
libgcrypt should support secp256k1 for KEM API.
I don't think it's supported by FIPS, but it's defined by SEC standard.
GnuPG 2.5 has moved to use KEM API for its ECC encryption/decryption.
libgcrypt should support secp256k1 for KEM API.
I don't think it's supported by FIPS, but it's defined by SEC standard.
| rG GnuPG | |||
| rG5efabec21883 gpg:ecc: Use the common function of gnupg_get_ecc_params. | |||
| rG944494978090 common: Remove openpgp_oid_to_kem_algo. | |||
| rG5ab9d59ee19e common:ecc: Have a field if the curve of ECC is Weierstrass. | |||
| rC libgcrypt | |||
| rCd9ebc6c4e8b5 cipher:kem:ecc: Support secp256k1 by KEM API. | |||
| rCf7e06f8a29fc cipher:kem: Provide each enum constant as macro. | |||
| rCe9b1c3ec91a1 cipher:kem: Provide each enum constant as macro. | |||
| rC10c0ce88ba3f cipher:kem:ecc: Support secp256k1 by KEM API. | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Resolved | • gniibe | T7649 gnupg: Use KEM interface for encryption/decryption | ||
| Resolved | • gniibe | T7698 Add support of secp256k1 for KEM API |
Should be fixed with 2.5.9. Given that secp256 is an esoteric curve for GnuPG it does not make sense to run the entire QA process.