cipher:kem:ecc: Support secp256k1 by KEM API.

* src/gcrypt.h.in (GCRY_KEM_RAW_P256K1): New.
* cipher/kem-ecc.c (algo_to_curve, algo_to_seckey_len): Support
GCRY_KEM_RAW_P256K1.

--

GnuPG-bug-id: 7698
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>